--- a/index.html
+++ b/index.html
@@ -11,39 +11,40 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;400;700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <script src="js/script.js" defer></script>
     </head>
 <body>
     <main>
         <div id="calculator">
             <div id="calc-display">
-                <p id="calc-communicator">83219</p>
+                <p id="calc-communicator">0</p>
                 <hr>
-                <p id="calc-current-operation">311</p>
+                <p id="calc-current-operation">0</p>
             </div>
             <div id="calc-btn-container">
-                <button class="calc-btn calc-number-btn">7</button>
-                <button class="calc-btn calc-number-btn">8</button>
-                <button class="calc-btn calc-number-btn">9</button>
-                <button class="calc-btn calc-misc-btn">+/-</button>
-                <button class="calc-btn calc-misc-btn">!</button>
-                <button class="calc-btn calc-number-btn">4</button>
-                <button class="calc-btn calc-number-btn">5</button>
-                <button class="calc-btn calc-number-btn">6</button>
-                <button class="calc-btn calc-misc-btn">✖</button>
-                <button class="calc-btn calc-misc-btn">÷</button>
-                <button class="calc-btn calc-number-btn">1</button>
-                <button class="calc-btn calc-number-btn">2</button>
-                <button class="calc-btn calc-number-btn">3</button>
-                <button class="calc-btn calc-misc-btn">-</button>
-                <button id="calc-equals-btn" class="calc-btn">=</button>
-                <button id="calc-clear-btn" class="calc-btn">
+                <button data-button="7" class="calc-btn calc-number-btn">7</button>
+                <button data-button="8" class="calc-btn calc-number-btn">8</button>
+                <button data-button="9" class="calc-btn calc-number-btn">9</button>
+                <button data-button="toggle" class="calc-btn calc-misc-btn">+/-</button>
+                <button data-button="factorial" class="calc-btn calc-misc-btn">!</button>
+                <button data-button="4" class="calc-btn calc-number-btn">4</button>
+                <button data-button="5" class="calc-btn calc-number-btn">5</button>
+                <button data-button="6" class="calc-btn calc-number-btn">6</button>
+                <button data-button="multiply" class="calc-btn calc-misc-btn">✖</button>
+                <button data-button="divide" class="calc-btn calc-misc-btn">÷</button>
+                <button data-button="1" class="calc-btn calc-number-btn">1</button>
+                <button data-button="2" class="calc-btn calc-number-btn">2</button>
+                <button data-button="3" class="calc-btn calc-number-btn">3</button>
+                <button data-button="subtract" class="calc-btn calc-misc-btn">-</button>
+                <button data-button="calculate" id="calc-equals-btn" class="calc-btn">=</button>
+                <button data-button="clear" id="calc-clear-btn" class="calc-btn">
                     <picture>
-                        <img src="assets/images/logos/cycloneStudiosC.svg" alt="Cyclone Studios™ Logo">
+                        <img src="assets/images/logos/cycloneStudiosC.svg" alt="Clear">
                     </picture>
                 </button>
-                <button class="calc-btn calc-number-btn">0</button>
-                <button class="calc-btn calc-misc-btn">.</button>
-                <button class="calc-btn calc-misc-btn">+</button>
+                <button data-button="0" class="calc-btn calc-number-btn">0</button>
+                <button data-button="." class="calc-btn calc-misc-btn">.</button>
+                <button data-button="add" class="calc-btn calc-misc-btn">+</button>
             </div>
 
         </div>
