--- a/index.html
+++ b/index.html
@@ -22,31 +22,30 @@
                 <p id="calc-current-operation">0</p>
             </div>
             <div id="calc-btn-container">
-                <button data-button="7" class="calc-btn calc-number-btn">7</button>
-                <button data-button="8" class="calc-btn calc-number-btn">8</button>
-                <button data-button="9" class="calc-btn calc-number-btn">9</button>
-                <button data-button="toggle" class="calc-btn calc-misc-btn">+/-</button>
-                <button data-button="factorial" class="calc-btn calc-misc-btn">!</button>
-                <button data-button="4" class="calc-btn calc-number-btn">4</button>
-                <button data-button="5" class="calc-btn calc-number-btn">5</button>
-                <button data-button="6" class="calc-btn calc-number-btn">6</button>
-                <button data-button="multiply" class="calc-btn calc-misc-btn">✖</button>
-                <button data-button="divide" class="calc-btn calc-misc-btn">÷</button>
-                <button data-button="1" class="calc-btn calc-number-btn">1</button>
-                <button data-button="2" class="calc-btn calc-number-btn">2</button>
-                <button data-button="3" class="calc-btn calc-number-btn">3</button>
-                <button data-button="subtract" class="calc-btn calc-misc-btn">-</button>
-                <button data-button="calculate" id="calc-equals-btn" class="calc-btn">=</button>
-                <button data-button="clear" id="calc-clear-btn" class="calc-btn">
+                <button data-button="7" data-type="number" class="calc-btn calc-number-btn">7</button>
+                <button data-button="8" data-type="number" class="calc-btn calc-number-btn">8</button>
+                <button data-button="9" data-type="number" class="calc-btn calc-number-btn">9</button>
+                <button data-button="+/-" data-type="toggle" id="calc-toggle-btn" class="calc-btn calc-misc-btn">+/-</button>
+                <button data-button="!" data-type="factorial" id="calc-factorial-btn" class="calc-btn calc-misc-btn">!</button>
+                <button data-button="4" data-type="number" class="calc-btn calc-number-btn">4</button>
+                <button data-button="5" data-type="number" class="calc-btn calc-number-btn">5</button>
+                <button data-button="6" data-type="number" class="calc-btn calc-number-btn">6</button>
+                <button data-button="x" data-type="operator" class="calc-btn calc-operator-btn calc-misc-btn">x</button>
+                <button data-button="÷" data-type="operator" class="calc-btn calc-operator-btn calc-misc-btn">÷</button>
+                <button data-button="1" data-type="number" class="calc-btn calc-number-btn">1</button>
+                <button data-button="2" data-type="number" class="calc-btn calc-number-btn">2</button>
+                <button data-button="3" data-type="number" class="calc-btn calc-number-btn">3</button>
+                <button data-button="-" data-type="operator" class="calc-btn calc-operator-btn calc-misc-btn">-</button>
+                <button data-button="=" data-type="equals" id="calc-equals-btn" class="calc-btn calc-misc-btn">=</button>
+                <button data-button="c" data-type="clear" id="calc-clear-btn" class="calc-btn calc-misc-btn">
                     <picture>
                         <img src="assets/images/logos/cycloneStudiosC.svg" alt="Clear">
                     </picture>
                 </button>
-                <button data-button="0" class="calc-btn calc-number-btn">0</button>
-                <button data-button="." class="calc-btn calc-misc-btn">.</button>
-                <button data-button="add" class="calc-btn calc-misc-btn">+</button>
+                <button data-button="0" data-type="number" class="calc-btn calc-number-btn">0</button>
+                <button data-button="." data-type="decimal" id="calc-decimal-btn" class="calc-btn calc-misc-btn">.</button>
+                <button data-button="+" data-type="operator" class="calc-btn calc-operator-btn calc-misc-btn">+</button>
             </div>
-
         </div>
     </main>
     <footer>
@@ -58,6 +57,5 @@
             </picture>
         </div>
     </footer>
-    
 </body>
 </html>
