add keyboard functionality

--- a/index.html
+++ b/index.html
@@ -22,29 +22,29 @@
                 <p id="calc-current-operation">0</p>
             </div>
             <div id="calc-btn-container">
-                <button data-button="7" data-type="number" class="calc-btn calc-number-btn">7</button>
-                <button data-button="8" data-type="number" class="calc-btn calc-number-btn">8</button>
-                <button data-button="9" data-type="number" class="calc-btn calc-number-btn">9</button>
-                <button data-button="+/-" data-type="toggle" id="calc-toggle-btn" class="calc-btn calc-misc-btn">+/-</button>
-                <button data-button="!" data-type="operator" id="calc-factorial-btn" class="calc-btn calc-misc-btn">!</button>
-                <button data-button="4" data-type="number" class="calc-btn calc-number-btn">4</button>
-                <button data-button="5" data-type="number" class="calc-btn calc-number-btn">5</button>
-                <button data-button="6" data-type="number" class="calc-btn calc-number-btn">6</button>
-                <button data-button="x" data-type="operator" class="calc-btn calc-operator-btn calc-misc-btn">x</button>
-                <button data-button="÷" data-type="operator" class="calc-btn calc-operator-btn calc-misc-btn">÷</button>
-                <button data-button="1" data-type="number" class="calc-btn calc-number-btn">1</button>
-                <button data-button="2" data-type="number" class="calc-btn calc-number-btn">2</button>
-                <button data-button="3" data-type="number" class="calc-btn calc-number-btn">3</button>
-                <button data-button="-" data-type="operator" class="calc-btn calc-operator-btn calc-misc-btn">-</button>
-                <button data-button="=" data-type="equals" id="calc-equals-btn" class="calc-btn calc-misc-btn">=</button>
-                <button data-button="c" data-type="clear" id="calc-clear-btn" class="calc-btn calc-misc-btn">
+                <button data-key="7" data-type="number" class="calc-btn calc-number-btn">7</button>
+                <button data-key="8" data-type="number" class="calc-btn calc-number-btn">8</button>
+                <button data-key="9" data-type="number" class="calc-btn calc-number-btn">9</button>
+                <button data-key="t" data-type="toggle" id="calc-toggle-btn" class="calc-btn calc-misc-btn">+/-</button>
+                <button data-key="!" data-type="operator" id="calc-factorial-btn" class="calc-btn calc-misc-btn">!</button>
+                <button data-key="4" data-type="number" class="calc-btn calc-number-btn">4</button>
+                <button data-key="5" data-type="number" class="calc-btn calc-number-btn">5</button>
+                <button data-key="6" data-type="number" class="calc-btn calc-number-btn">6</button>
+                <button data-key="x" data-type="operator" class="calc-btn calc-operator-btn calc-misc-btn">x</button>
+                <button data-key="/" data-type="operator" class="calc-btn calc-operator-btn calc-misc-btn">÷</button>
+                <button data-key="1" data-type="number" class="calc-btn calc-number-btn">1</button>
+                <button data-key="2" data-type="number" class="calc-btn calc-number-btn">2</button>
+                <button data-key="3" data-type="number" class="calc-btn calc-number-btn">3</button>
+                <button data-key="-" data-type="operator" class="calc-btn calc-operator-btn calc-misc-btn">-</button>
+                <button data-key="=" data-type="equals" id="calc-equals-btn" class="calc-btn calc-misc-btn">=</button>
+                <button data-key="c" data-type="clear" id="calc-clear-btn" class="calc-btn calc-misc-btn">
                     <picture>
                         <img src="assets/images/logos/cycloneStudiosC.svg" alt="Clear">
                     </picture>
                 </button>
-                <button data-button="0" data-type="number" class="calc-btn calc-number-btn">0</button>
-                <button data-button="." data-type="decimal" id="calc-decimal-btn" class="calc-btn calc-misc-btn">.</button>
-                <button data-button="+" data-type="operator" class="calc-btn calc-operator-btn calc-misc-btn">+</button>
+                <button data-key="0" data-type="number" class="calc-btn calc-number-btn">0</button>
+                <button data-key="." data-type="decimal" id="calc-decimal-btn" class="calc-btn calc-misc-btn">.</button>
+                <button data-key="+" data-type="operator" class="calc-btn calc-operator-btn calc-misc-btn">+</button>
             </div>
         </div>
     </main>
