fix footer copyright info

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </main>
     <footer>
-        <p id="footnote">© 2023 Time Capsule NY, LLC. All Rights Reserved</p>
+        <p id="footnote">© 2023 Cyclone Studios, LLC. All Rights Reserved</p>
         <div id="cycloneContainer">
             <p id="poweredBy">Powered By</p>
             <picture id="cycloneStudios">
